salesforce/force-app/main/default/objects/Forecast__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Text</type>
    <length>50</length>
</CustomField>