salesforce/force-app/main/default/objects/Forecast__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>Customer Id</label>
    <type>Text</type>
    <length>50</length>
</CustomField>