salesforce/force-app/main/default/objects/Forecast__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <label>Fiscal Period</label>
    <type>Text</type>
    <length>20</length>
</CustomField>