salesforce/force-app/main/default/objects/Forecast__c/fields/Forecast_Qty__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Qty__c</fullName>
    <label>Forecast Qty</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>