salesforce/force-app/main/default/objects/Forecast__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <label>Location Id</label>
    <type>Text</type>
    <length>50</length>
</CustomField>