salesforce/force-app/main/default/objects/Forecast__c/fields/Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Period_Type__c</fullName>
    <label>Period Type</label>
    <type>Text</type>
    <length>20</length>
</CustomField>