salesforce/force-app/main/default/objects/Forecast__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <type>Text</type>
    <length>50</length>
</CustomField>