salesforce/force-app/main/default/objects/Forecast__c/fields/Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Amount__c</fullName>
    <label>Revenue Amount</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>