salesforce/force-app/main/default/objects/Forecast__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Text</type>
    <length>100</length>
</CustomField>