salesforce/force-app/main/default/objects/Forecast__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Text</type>
    <length>20</length>
</CustomField>